--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@
           align-content: center;
       padding: 20px; }
       #mainContainer #mainContentBlock #mainContent {
+        box-shadow: 1px 8px 19px rgba(51, 51, 51, 0.678);
         background-color: #fff;
         background-color: rgba(255, 255, 255, 0.9);
         border-radius: 20px;
@@ -78,9 +79,17 @@
           border-radius: 50%;
           background-position: center center;
           background-size: cover;
-          box-shadow: inset 5px 5px 35px 5px #eeeeee;
+          /*box-shadow: inset 5px 5px 35px 5px #eeeeee;*/
+          box-shadow: 1px 8px 19px rgba(51, 51, 51, 0.35);
           opacity: 0.95; 
           transition: all 2.2s ease!important; }
+        @media only screen and (max-width: 768px) {
+          /* For mobile phones: */
+          #mainContainer #mainContentBlock #mainContent #avatarImageBlock {
+            width: 200px;
+            height: 200px;
+          }
+        }
         #mainContainer #mainContentBlock #mainContent #introBox {
           text-align: center;
           background-color: #f8f8f8;
@@ -149,7 +158,11 @@
   div.footer {
     text-align: center;
     font-size: 0.8em;
-    text-shadow: 0px 2px 5px #cccccc; }
+    text-shadow: 0px 2px 5px #cccccc;
+  }
+  div.footer a{
+    color: inherit;
+  }
 /*theme and template default css ends*/
 
 /*eye monitoring*/
