--- a/css/skystyle.css
+++ b/css/skystyle.css
@@ -55,7 +55,12 @@
               justify-content: center;
       -ms-flex-line-pack: center;
           align-content: center;
-      padding: 20px; }
+      padding: 20px; 
+      perspective: 125px;
+      animation: mymove 15s infinite; }
+      @keyframes mymove {
+        50% {perspective-origin: left ;}
+      }
       #mainContainer #mainContentBlock #mainContent {
         box-shadow: 1px 8px 19px rgba(51, 51, 51, 0.678);
         background-color: #fff;
@@ -82,7 +87,8 @@
           /*box-shadow: inset 5px 5px 35px 5px #eeeeee;*/
           box-shadow: 1px 8px 19px rgba(51, 51, 51, 0.35);
           opacity: 0.95; 
-          transition: all 2.2s ease!important; }
+          transition: all 2.2s ease!important; 
+          transform: rotateX(1.2deg); }
         @media only screen and (max-width: 768px) {
           /* For mobile phones: */
           #mainContainer #mainContentBlock #mainContent #avatarImageBlock {
